[project]
name = "muckraker"
version = "0.1.0"
description = "A vintage gazette generator"
authors = [{ name = "Vasily Negrebetskiy" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "fastapi==0.110.0",
    "jinja2==3.1.3",
    "markdown==3.6",
    "python-multipart==0.0.9",
    "weasyprint==61.2",
    "pydyf>=0.9.0,<0.10",
    "uvicorn==0.29.0",
    "aiosqlite>=0.20.0,<0.21",
    "nh3>=0.2.18,<0.3",
    "pydantic>=2.11.7,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2,<9",
    "httpx==0.26.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry_bumpversion.file."muckraker/__init__.py"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "E",
    "F",
    "W",
]
